--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ProjectPPWebBuild.loader.js";
+      var loaderUrl = buildUrl + "/ProjectPP_Web_CN.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/ProjectPPWebBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/ProjectPPWebBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/ProjectPPWebBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/ProjectPP_Web_CN.data.unityweb",
+        frameworkUrl: buildUrl + "/ProjectPP_Web_CN.framework.js.unityweb",
+        codeUrl: buildUrl + "/ProjectPP_Web_CN.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Somggori",
         productName: "ProjectPP",
